@@ -4,7 +4,7 @@ Gem::Specification.new do |spec|
 
   spec.name                      =  'hash-compositing'
   spec.rubyforge_project         =  'hash-compositing'
-  spec.version                   =  '1.0.2'
+  spec.version                   =  '1.0.3'
 
   spec.summary                   =  "Provides Hash::Compositing."
   spec.description               =  "An implementation of Hash that permits chaining, where children inherit changes to parent and where parent settings can be overridden in children."
