@@ -1,4 +1,6 @@
 
+begin ; require 'development' ; rescue ; end
+
 require 'hash/hooked'
 
 # namespaces that have to be declared ahead of time for proper load order
